# earwig

./: Cargo.toml  LICENSE  README.md
src/: choppy.rs  clippy.rs  ear.rs  extremely.rs  hungry.rs  imaginary.rs  in.rs  listen.rs  out.rs  play.rs  randomly.rs  reversi.rs  silly.rs  smashy.rs  smiley.rs  smoothy.rs  speedy.rs  utils.rs  wobbly.rs
