[package]
name = "rust-audio-tests"
version = "0.1.0"
authors = ["sandreae <contact@samandreae.com>"]
edition = "2021"
description = "Ever wanted to pipe raw audio samples around in the terminal to impress your friends at a party? Well then, you've come to the right place."
autobins = false
readme = "README.md"
exclude = [".gitignore"]

[[bin]]
name = "in"
path = "src/in.rs"

[[bin]]
name = "out"
path = "src/out.rs"

[[bin]]
name = "choppy"
path = "src/choppy.rs"

[[bin]]
name = "smashy"
path = "src/smashy.rs"

[[bin]]
name = "smoothy"
path = "src/smoothy.rs"

[dependencies]
rand = "0.8.5"
web-audio-api = "0.24.0"
anyhow = "1.0.66"
cpal = "0.14.1"
crossbeam = "0.8.2"
